--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,20 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Mm]emoryCaptures/
+
+###
+# Unity folders and files
+###
+[Aa]ssets/AssetStoreTools*
+[Aa]ssets/TextMesh Pro*
+[Ll]ibrary/
+[Bb]uild/
+[Bb]uilds/
+[Ll]ocal[Cc]ache/
+[Uu]ser[Ss]ettings/
+[Oo]bj/
+[Tt]emp/
+[Uu]nityGenerated/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
